--- a/src/scss/components/base/_buttons.scss
+++ b/src/scss/components/base/_buttons.scss
@@ -82,7 +82,7 @@
 		background-color: initial;
 
 		&:hover {
-			color: $color-navy;
+			color: $color-primary;
 			background-color: initial;
 		}
 	}
