--- a/views/blocks/block-anchors.twig
+++ b/views/blocks/block-anchors.twig
@@ -52,7 +52,7 @@
                     <div class="panel__image">
                         {% if tab.image %}
                             <figure class="ratio-4-3">
-                                {{ getRwdImage( tab.image.id, 'cover', 'large',  { class:'u-border-radius u-image-cover' } ) }}
+                                {{ getRwdImage( tab.image.id, 'cover', 'standard',  { class:'u-border-radius u-image-cover' } ) }}
                             </figure>
                         {% endif %}
                     </div>
