--- a/views/blocks/block-animation.twig
+++ b/views/blocks/block-animation.twig
@@ -7,7 +7,7 @@
 {# <script src="https://unpkg.com/@lottiefiles/lottie-player@1/dist/lottie-player.js"></script>
 <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
  #}
-<section class="{{ block.classes }} {{ display }}" id="{{ block.id }}">
+<section class="{{ block.classes }} {{ display }} block-solid" id="{{ block.id }}">
   <div class="block-container l-container">
 
     <div class="block-animation__columns">
