--- a/views/blocks/block-cta.twig
+++ b/views/blocks/block-cta.twig
@@ -5,7 +5,7 @@
  */
 #}
 
-<section class="{{ block.classes }} {{ display }}" id="{{ block.id }}">
+<section class="{{ block.classes }} {{ display }} block-solid" id="{{ block.id }}">
   <div class="block-container l-container">
     
     <div class="block-cta__inner">
