--- a/views/partials/header-site.twig
+++ b/views/partials/header-site.twig
@@ -28,8 +28,7 @@
       {% endif %}
     </div>
     
-
-    {# <?php	include( locate_template( 'template-parts/commons/lang-switcher.php' )); ?> #}
+    {# {% include "partials/lang-switcher.twig" %} #}
 
     <button class="btn-burger d-flex d-xl-none" id="btn-burger" aria-label="menu">
       <span class="btn-burger__icon">
