--- a/src/scss/layout/_header-site.scss
+++ b/src/scss/layout/_header-site.scss
@@ -361,6 +361,7 @@
         justify-content: flex-start;
         width: 100%;
         height: calc(100vh - var(--header-height));
+        height: calc(100 * var(--vh) - var(--header-height));    // fix 100vh in iOS and Chrome Android
         padding: 1rem var(--container-padding) 3rem;
         margin-left: initial;
         background-color: white;
