--- a/views/blocks/block-cta-illus.twig
+++ b/views/blocks/block-cta-illus.twig
@@ -5,7 +5,7 @@
  */
 #}
 
-<section class="{{ block.classes }}" id="{{ block.id }}">
+<section class="{{ block.classes }} block-solid" id="{{ block.id }}">
   <div class="block-container l-container">
     
     <div class="block-cta-illus__inner">
