--- a/views/blocks/block-image-text.twig
+++ b/views/blocks/block-image-text.twig
@@ -26,7 +26,7 @@
         <div class="panel__image">
             {% if image %}
                 <figure class="ratio-4-3">
-                    {{ getRwdImage( image.id, 'cover', 'large',  { class:'u-border-radius u-image-cover' } ) }}
+                    {{ getRwdImage( image.id, 'cover', 'standard',  { class:'u-border-radius u-image-cover' } ) }}
                 </figure>
             {% endif %}
         </div>
