--- a/views/blocks/block-timeline.twig
+++ b/views/blocks/block-timeline.twig
@@ -25,7 +25,8 @@
                 <div class="panel-timeline__image">
                     {% if item.image %}
                         <figure class="ratio-4-3">
-                            {{ getRwdImage( item.image.id, 'cover', 'large',  { class:'u-border-radius u-image-cover' } ) }}
+                            {# {{ getRwdImage( item.image.id, 'cover', 'standard',  { class:'u-border-radius u-image-cover' } ) }} #}
+                            {{ getRwdImage( item.image.id, 'cover', 'standard',  { class:'u-border-radius u-image-cover' } ) }}
                         </figure>
                     {% endif %}
                 </div>
