--- a/views/partials/footer-site.twig
+++ b/views/partials/footer-site.twig
@@ -39,6 +39,8 @@
       <div class="footer-row2">
         <div class="footer-site__inner l-container --large">
           {% include "partials/nav-legal.twig" %}
+
+          {% include "partials/lang-switcher-footer.twig" %}
         </div>
       </div>
 
