--- a/src/scss/components/common/_lang-switcher.scss
+++ b/src/scss/components/common/_lang-switcher.scss
@@ -9,152 +9,128 @@
 // -----------------------------------------------
 
 .lang-switcher {
-  position: relative;
-  display: flex;
+	display: grid;
+	grid-template-areas: "select";
+	grid-template-columns: 1fr;
+	align-items: center;
+	padding-left: 12px;
+	font-size: 16px;
+	text-transform: uppercase;
+	cursor: pointer;
 
-  &.-is-open  {
-    .lang-switcher__btn {
-      background-color: rgba(#CBD5E1,1);
-    }
+	&:hover {
+		select {
+			color: $color-primary;
+		}
+		.icon {
+			fill: $color-primary;
+		}
+	}
 
-    .lang-switcher__list {
-      visibility: visible;
-      opacity: 1;
-      transform: translateY(0);
-      transition: visibility $trans-duration, opacity $trans-duration, transform 0.35s;
-    }
-  }
+	select {
+		grid-area: select;
+		appearance: none;
+		// Additional resets for further consistency
+		width: 100%;
+		padding: 4px 20px 4px 0;
+		margin: 0;
+		font-family: inherit;
+		font-size: inherit;
+		line-height: inherit;
+		text-transform: inherit;
+		background-color: transparent;
+		border: none;
+		cursor: inherit;
+		outline: none;
+		color: inherit;
+		transition: color $trans-color;
+	}
+
+	.icon {
+		grid-area: select;
+		justify-self: end;
+		margin-left: 16px;
+		font-size: 18px;
+		fill: $color-grey-500;
+		transition: fill $trans-color;
+	}
 }
-
-.lang-switcher__btn {
-  position: relative;
-  z-index: 1;
-  display: inline-flex;
-  align-items: center;
-  padding: 6px 12px 6px 10px;
-  font-size: 16px;
-  text-transform: uppercase;
-  background-color: rgba(#CBD5E1,0);
-  transition: background-color $trans-duration;
-
-  &:hover {
-    background-color: rgba(#CBD5E1,1);
-  }
-
-  .icon {
-    margin-left: 6px;
-    font-size: 18px;
-    fill: $color-grey-500;
-    transition: fill $trans-color, transform $trans-duration;
-  }
-}
-
-
-.lang-switcher__list {
-  @include list-bare();
-  position: absolute;
-  left: 0;
-  top: calc(100% - 12px);
-  width: 100%;
-  padding: 16px 12px 6px 12px;
-  font-size: 16px;
-  text-transform: uppercase;
-  border: 1px solid #CBD5E1;
-  border-radius: $border-radius;
-  background-color: white;
-
-  visibility: hidden;
-  opacity: 0;
-  transform: translateY(-20px);
-  transition: visibility 0.2s, opacity 0.2s, transform 0.2s;
-
-  a {
-    display: inline-block;
-    padding: 4px 0;
-    opacity: 0.4;
-    transition: opacity $trans-duration;
-
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
-
-
-
 
 
 //  Language switcher in footer
 // -----------------------------------------------
 
-.lang-switcher.-footer {
+.lang-switcher.--footer {
+	grid-template-areas: "label select";
+	grid-template-columns: auto auto;
+	padding-left: initial;
+	font-size: 14px;
+	text-transform: initial;
+	color: $color-white;
+	cursor: initial;
 
-  &.-is-open  {
-    .lang-switcher__btn {
-      background-color: rgba($color-navy,1);
-    }
-    .lang-switcher__list {
-      transform: translateY(0);
-    }
-  }
+	&:hover {
+		select {
+			color: $color-primary-200;
+		}
+		.icon {
+			fill: $color-primary-200;
+		}
+	}
 
-  .lang-switcher__btn {
-    font-weight: 500;
-    color: white;
-    background-color: rgba($color-navy,0);
-  
-    &:hover {
-      background-color: rgba($color-navy,1);
-    }
-  
-    .icon {
-      fill: white;
-    }
-  }
-  
-  .lang-switcher__list {
-    top: unset;
-    bottom: calc(100% - 12px);
-    padding: 6px 12px 16px 12px;
-    border: 1px solid $color-navy;
-    transform: translateY(20px);
-  }
+	span {
+		grid-area: label;
+		margin-right: 4px;
+	}
+
+	select {
+		font-weight: 700;
+		cursor: pointer;
+	}
+
+	.icon {
+		fill: $color-white;
+		pointer-events: none;
+	}
 }
 
 
 
-
-
-
-
-
-
-//  Language switcher on mobile
+//  Language switcher on mobile (inline)
 // -----------------------------------------------
 
 .lang-switcher-mobile {
-  @include list-inline-block();
+	@include list-inline-flex();
+	justify-content: center;
+	width: 100%;
 
-  li:not(:last-of-type) {
-    margin-right: 30px;
-  }
+	li {
+		position: relative;
+		padding-right: 14px;
 
-  li:first-child a {
-    padding-left: 0;
-  }
+		& + li {
+			padding-left: 14px;
+	
+			&:before {
+				@include pseudo-block(6px, 1px, $color-grey-500);
+				top: 50%;
+				left: -3px;
+			}
+		}
+	} 
 
-  li.current-lang a {
-    color: #CDCDCD;
-  }
+	li.current-lang a {
+		font-weight: 700;
+		color: $color-primary;
+	}
+	
+	a {
+		display: inline-block;
+		padding: 4px 0;
+		text-transform: uppercase;
 
-  a {
-    display: inline-block;
-    padding: 4px 10px;
-    text-transform: uppercase;
-    transition: color $trans-duration;
-
-    &:hover {
-      color: $color-primary;
-    }
-  }
+		&:hover {
+			color: $color-primary;
+		}
+	}
 }
