--- a/src/scss/layout/_header-site.scss
+++ b/src/scss/layout/_header-site.scss
@@ -68,7 +68,8 @@
         margin-left: 20px;
     }
 
-    .btn-contact-mobile {
+    .btn-contact-mobile,
+    .lang-switcher-mobile {
         display: none;
     }
     
@@ -508,6 +509,16 @@
         .btn-contact-mobile {
             display: inline-flex;
             margin-top: 40px;
+        }
+        .lang-switcher-mobile {
+            display: inline-flex;
+            margin-top: 20px;
+        }
+        
+    }
+    .nav-header-right {
+        .lang-switcher {
+            display: none;
         }
     }
 }
