--- a/views/partials/header-site.twig
+++ b/views/partials/header-site.twig
@@ -2,7 +2,7 @@
 
   <div class="header-site__inner l-container --large">
 
-    <a href="{{ site.url }}" class="header-brand" aria-label="Accueil">
+    <a href="{{ fn('pl_home_url') }}" class="header-brand" aria-label="Accueil">
       <svg aria-hidden="true"><use xlink:href="#logo-cmb"></use></svg>
     </a>
 
