--- a/views/blocks/block-testimonial.twig
+++ b/views/blocks/block-testimonial.twig
@@ -21,29 +21,32 @@
 	{% if items|length %}
 		<div class="slider-testimonial custom-scrollbar">
 			{% for item in items %}
+				<div class="slide-testimonial-wrapper">
 
-				<div class="slide-testimonial">
-					{% if item.title %}
-						<span class="slide-testimonial__title suptitle">{{ item.title }}</span>
-					{% endif %}
-					{% if item.text %}
-						<p class="slide-testimonial__text">{{ item.text }}</p>
-					{% endif %}
-
-					<div class="slide-testimonial__footer">
-						{% if item.image %}
-							<img {{ setImgAttributes( item.image ) }}/>
+					<div class="slide-testimonial">
+						{% if item.title %}
+							<span class="slide-testimonial__title suptitle">{{ item.title }}</span>
+						{% endif %}
+						{% if item.text %}
+							<p class="slide-testimonial__text">{{ item.text }}</p>
 						{% endif %}
 
-						<div class="slide-testimonial__infos">
-							{% if item.author %}
-								<span class="slide-testimonial__author">{{ item.author }}</span>
+						<div class="slide-testimonial__footer">
+							{% if item.image %}
+								<img {{ setImgAttributes( item.image ) }}/>
 							{% endif %}
-							{% if item.date %}
-								<span class="slide-testimonial__date">{{ item.date }}</span>
-							{% endif %}
+
+							<div class="slide-testimonial__infos">
+								{% if item.author %}
+									<span class="slide-testimonial__author">{{ item.author }}</span>
+								{% endif %}
+								{% if item.date %}
+									<span class="slide-testimonial__date">{{ item.date }}</span>
+								{% endif %}
+							</div>
 						</div>
 					</div>
+
 				</div>
 
 			{% endfor %}
