--- a/views/blocks/block-tabs.twig
+++ b/views/blocks/block-tabs.twig
@@ -46,9 +46,19 @@
 
                         <div class="panel__image">
                             {% if tab.image %}
+
+                                {% if tab.group_text.link_cta.url %}
+                                    <a {{ setLinkAttributes( tab.group_text.link_cta ) }} class="panel__image-link">
+                                {% endif %}
+
                                 <figure class="ratio-4-3">
                                     {{ getRwdImage( tab.image.id, 'cover', 'standard',  { class:'u-border-radius u-image-cover' } ) }}
                                 </figure>
+
+                                {% if tab.group_text.link_cta.url %}
+                                    </a>
+                                {% endif %}
+
                             {% endif %}
                         </div>
 
