--- a/src/scss/components/blocks/_block-anchors.scss
+++ b/src/scss/components/blocks/_block-anchors.scss
@@ -33,7 +33,7 @@
   // -----------------------------------------------
   .tablist-wrapper {
     position: sticky;
-    top: var(--header-height);
+    top: calc(var(--header-height) + var(--notif-bar-height));
     z-index: 1;
     box-shadow: 0px 1px 3px rgba(black, 0.1);
   }
@@ -142,15 +142,3 @@
     }
   }
 }
-
-
-/* body {
-  &:before {
-    @include pseudo-block(100%, 1px);
-    position: fixed;
-    top: 50%;
-    left: 0;
-    z-index: 1000;
-    border: 1px dashed rgba(red,0.1); 
-  }
-} */
